# hsctf-2019-freshmen

./: .gitignore  LICENSE  README.md
Crypto-easyRSA/: easyRSA.py  easyRSA_solve.py  flag.py  wp.md
Crypto-hardRSA/: flag.py  hardRSA.py  hardRSA_solve.py  wp.md
Crypto-xor/: wp.txt  xor.py  xorsovle.py
Crypto-影流之主账号丢失/: README.md
Crypto-影流之主账号丢失/src/: CMakeLists.txt  README.txt  backup.cpp  recover.cpp
Crypto-影流之主账号丢失/src/includes/: modes.h  sm3.h  sm4.h
Crypto-影流之主账号丢失/src/modes/: modes_lcl.h
Crypto-影流之主账号丢失/src/sm3/: sm3.c
Crypto-影流之主账号丢失/src/sm4/: sm4_cbc.c  sm4_common.c  sm4_enc.c  sm4_lcl.h  sm4_setkey.c
Crypto-影流之主账号丢失/wp/: CMakeLists.txt  cracker.cc
MISC-251/: wp.txt
MISC-Snake/: wp.md
MISC-Snake/Snake_src/: Snake.csproj
MISC-fxxk/fxxk/: README  fxxk
MISC-fxxk/fxxk/src/: get
MISC-simple/simple/: README  data
MISC-华师币/: README.md  coin.sol
MISC-华师币/website/: abi.js  app.js  index.html
MISC-快速记仇/快速记仇/: README
MISC-社会主义好/社会主义好/: README
PWN-babyAsm/babyAsm/: .gdb_history  README
PWN-babyRSA/babyRSA/: .gdb_history  README
PWN-babyShell/babyShell/: .gdb_history  README
Reverse-FlappyBird/: FlappyBird.c
Reverse-maze/: maze.c
Reverse-medium_rev/: medium  medium_rev.c
Reverse-simple_rev/: simple  simple_rev.c
Reverse-vm/: vm  vm.c  vm.txt  vmAngrSolve.py  vmDisassemblyAndDecompilation.txt  vmPintoolsSolveLog.txt  vmsolve.py
Web-小明的Admin/: Dockerfile  README.md  docker-compose.yml  index.html  index.js  sercet.js
Web-小明的商城/: Dockerfile  README.md  docker-compose.yml  main.go
Web-小明的商城/pages/: index.html  start.html
(+31 files in other folders)
